module/core/former/tests/inc/struct_tests/compiletime/field_attr_bad.stderr
error: cannot find attribute `defaultx` in this scope
 --> tests/inc/struct_tests/compiletime/field_attr_bad.rs:7:6
  |
7 |   #[ defaultx( 31 ) ]
  |      ^^^^^^^^
